# vramcheck

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: gpus.json  models.json
vramcheck/: cli.py  display.py  gpu.py  model.py  tui.py
