[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vramcheck"
dynamic = ["version"]
description = "Will it run? VRAM advisor for local AI models"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "vramcheck contributors" },
]
keywords = ["vram", "gpu", "llm", "ollama", "gguf", "quantization", "ai", "local-llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "rich>=13.0",
]

[project.scripts]
vramcheck = "vramcheck.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/vramcheck"
Repository = "https://github.com/yourusername/vramcheck"
Issues = "https://github.com/yourusername/vramcheck/issues"

[tool.setuptools.dynamic]
version = { attr = "vramcheck.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["vramcheck*"]

[tool.setuptools.package-data]
vramcheck = ["../data/*.json"]
